--- a/проект платёжеспособность/платёжеспособность git.ipynb
+++ b/проект платёжеспособность/платёжеспособность git.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('/datasets/data.csv')"
+    "df = pd.read_csv('data.csv')"
    ]
   },
   {
