Update определение тарифа git.ipynb

--- a/проект оптимальный тариф/определение тарифа git.ipynb
+++ b/проект оптимальный тариф/определение тарифа git.ipynb
@@ -58,11 +58,11 @@
     "from math import factorial\n",
     "from scipy import stats as st\n",
     "\n",
-    "calls_df = pd.read_csv('/datasets/calls.csv')\n",
-    "internet_df = pd.read_csv('/datasets/internet.csv')\n",
-    "messages_df = pd.read_csv('/datasets/messages.csv')\n",
-    "tariffs_df = pd.read_csv('/datasets/tariffs.csv')\n",
-    "polz_df = pd.read_csv(\"/datasets/users.csv\")\n",
+    "calls_df = pd.read_csv('calls.csv')\n",
+    "internet_df = pd.read_csv('internet.csv')\n",
+    "messages_df = pd.read_csv('messages.csv')\n",
+    "tariffs_df = pd.read_csv('tariffs.csv')\n",
+    "polz_df = pd.read_csv(\"users.csv\")\n",
     "# calls_df.head()\n",
     "# internet_df.head()\n",
     "# messages_df.head()\n",
